1.5.1
Wed, 10 May 2006 20:47:34 +0000
  * runsv.c: delay restart of log service at least 1 sec, just as the main
    service.
  * runsvdir.c: don't double-copy filedescriptor.

1.5.0
Sun, 16 Apr 2006 12:26:50 +0000
  * man/runsvdir.8: document that the services directory is re-scanned if
    the time of last modification, the inode, or the device has changed.
  * sv.c: don't report success on 'sv start' if the service is in state
    finish (thx Matthew R. Dempsky).
  * svlogd.c: new config line p: optionally prefix each line written to
    logs, stderr, or through udp; no longer skip empty lines (just
    containing '\n'), old behavior can be restored with '-' in config.
  * man/svlogd.8: document new p config line; adapt.

1.4.1
Mon, 20 Mar 2006 18:54:41 +0000
  * doc/faq.html: typos; add usercontrol, userservices; minor.
  * src/uidgid.h: use uid_t, git_t (fix setting of multiple groups with
    dietlibc, thx Tino Keitel)

runit 1.4.0
Mon, 06 Mar 2006 12:45:08 +0000
  * doc/faq.html: new.
  * doc/benefits.html: use sv program instead of runsvstat, runsvctrl;
    minor.
  * doc/replaceinit.html, doc/runlevels.html: put getty service directory
    into /etc/sv/.
  * doc/runscripts.html: use sv program instead of svwaitup.
  * etc/*/3, etc/macosx/StartupItems/runit: use sv program instead of
    svwaitdown.
  * man/runsv.8: use sv program instead of runsvctrl.
  * man/sv.8: minor.
  * Makefile, package/commands: no longer build/install runsvctrl,
    runsvstat, svwaitdown, svwaitup.
  * man/runsvctrl.8, man/runsvstat.8, man/svwaitdown.8, man/svwaitup.8:
    remove; obsolete.
  * doc/index.html: add faq; remove runsvctrl, runsvstat, svwaitdown,
    svwaitup.
  * sv: fix usage output.
  * chpst: new option -d, limit data segment per process; don't use nested
    functions.

runit 1.3.3
Mon, 02 Jan 2006 20:35:34 +0000
  * chpst.c: adjust nice value and set limits before dropping permissions.
  * sv.c: new additional command 'check'; with -v check for CONT through