@@ -9,7 +9,7 @@
 <hr>
 <h1>runit - upgrading from previous versions</h1>
 <hr>
-<h3>1.4.0 or 1.4.1 to 1.5.0</h3>
+<h3>1.4.0 or 1.4.1 to 1.5.x</h3>
 The <a href="svlogd.8.html">svlogd</a> program supports a new configuration
 option p to optionally prefix each line written to logs, standard error, or
 through UDP with a string, and no longer strips empty lines from the logs.
