@@ -1,4 +1,4 @@
-Copyright (c) 2001-2005, Gerrit Pape
+Copyright (c) 2001-2006, Gerrit Pape
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
